--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -1,12 +1,10 @@
 <html>
     <head>
-      <title>
-       <%= title %>
-      </title>
+   <title><%= title %></title>
     </head>
     <body>
         <%- include('_header'); %>
-        <h1>Codeial <%= title %></h1>
+        <h1>This is <%= title %></h1> 
         <%- include('_footer'); %>
     </body>
 </html>
