--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,11 +3,16 @@
       <title>
        <%= title %>
       </title>
+      <link rel="stylesheet" href="../css/layout.css">
+      <%- style %>
     </head>
     <body>
         <%- include('_header'); %>
         <!-- this is the content part that will render at runtime i.e userProfile.ejs or home.js-->
+        <!-- provided by layout library-->
         <%- body %>
         <%- include('_footer'); %>
+
+        <%- script %>
     </body>
 </html>
