--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -1,2 +1,6 @@
 <link rel="stylesheet" href="../css/userProfile.css">
-<h1>This is <%= title %></h1> 
+<h1>This is <%= title %></h1>
+<div>
+    <p>Name : <%= user.name %></p>
+    <p>Email : <%= user.email %></p>
+</div> 
