--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,4 +2,27 @@
 
 <heading>
     Header page
+    <ul>
+        <!-- if user is logged in then-->
+        <% if(locals.user) { %>
+            <li>
+                <a href="/users/profile"></a>
+                <%= user.name %>
+            </li>
+            <br>
+            <li>
+                <a href="/users/sign-out">Sign Out</a>
+            </li>
+        <!-- if user is not logged in then--> 
+        <% } else { %>
+            <li>
+                <a href="/users/sign-in">Sign In</a>
+            </li>
+            <br>
+            <li>
+                <a href="/users/sign-up">Sign Up</a>
+            </li>
+        <% }%>
+    </ul>
 </heading>
+
