completed styles using SASS and SCSS

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -6,8 +6,8 @@
         <!-- if user is logged in then-->
         <% if(locals.user) { %>
             <li>
-                <a href="/users/profile"></a>
-                <%= user.name %>
+                <a href="/users/profile"> <%= user.name %></a>
+               
             </li>
             <br>
             <li>
