--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,11 @@
 <h1>Codeial <%= title %></h1>
+
+<!-- Posts need to render on home page so will make a form which user will share or post-->
+<section id = "feed-posts">
+<h4>Posts</h4>
+<form action="" id = "new-post-form" method="POST">
+    <textarea name="content" cols="30" rows="5" placeholder="Type here..."></textarea>
+    <input type="submit" value ="Post">
+</form>
+</section>
      
