--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -1,24 +1,37 @@
-<link rel="stylesheet" href="../css/userProfile.css">
-<h1>This is <%= title %></h1> 
-<h3>This is details of user on profile page</h3>
-<p><%= profile_user.name%></p>
-<p><%= profile_user.email%></p>
+<link rel="stylesheet" href="../css/userProfile.css" />
 
-<br>
+<br />
 
 <!-- if user is signed In then only we will show the form to update his/her profile-->
-<section id = "userprofile-form">
-    <h2>Updating user's profile by filling this form</h2>
-    <!-- locals.user.id means signedIn user id && profile_user.id means id of user coming from form-->
-<% if(locals.user.id == profile_user.id){%>
-        <form action="/users/update/<%= profile_user.id%>" method="POST">
-            <input type="text" name = "name", placeholder="Your Name", value="<%= profile_user.name %>" required>
-            <input type="email" name = "email", placeholder="Your email" value= "<%= profile_user.email %>" required>
-            <input type="submit" value ="Update" >
-        </form>
-    <%}else{%>
-        <!-- else only show profile info-->
-            <p><%= profile_user.name%></p>
-            <p><%= profile_user.email%></p>
-<%}%>
+<section id="userprofile-form">
+  <!-- locals.user.id means signedIn user id && profile_user.id means id of user coming from form-->
+  <% if(locals.user.id == profile_user.id){%>
+  <h2>Update your profile by filling this form</h2>
+  <form action="/users/update/<%= profile_user.id%>" method="POST">
+    <input
+      type="text"
+      name="name"
+      ,
+      placeholder="Your Name"
+      ,
+      value="<%= profile_user.name %>"
+      required
+    />
+    <input
+      type="email"
+      name="email"
+      ,
+      placeholder="Your email"
+      value="<%= profile_user.email %>"
+      required
+    />
+    <input type="submit" value="Edit Profile" />
+  </form>
+  
+  <%}else{%>
+  <!-- else only show profile info-->
+  <h3>Other User's Profile details</h3>
+  <p><%= profile_user.name%></p>
+  <p><%= profile_user.email%></p>
+  <%}%>
 </section>
