--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,38 +1,43 @@
-<h1>Codeial <%= title %></h1>
+<link rel="stylesheet" href="/css/home.css">
+<!-- <h1>Codeial <%= title %></h1>-->
 
-<!-- Posts need to render on home page so will make a form which user will share or post-->
-<section id = "feed-posts">
-<h4>Posts</h4>
-<!-- if user is not signedIn then don't show the post form or signed In user can see the post form-->
-<% if(locals.user) { %>
-<form action="/posts/create" id = "new-post-form" method="POST">
-    <textarea name="content" cols="30" rows="5" placeholder="Type here..."></textarea>
-    <input type="submit" value ="Post">
-</form>
-<% } %>
+<div id="home-container">
+
+   <!-- Posts need to render on home page so will make a form which user will share or post-->
+      <section id = "feed-posts">
+            <h4>Posts</h4>
+            <!-- if user is not signedIn then don't show the post form or signed In user can see the post form-->
+            <% if(locals.user) { %>
+            <form action="/posts/create" id = "new-post-form" method="POST">
+               <textarea name="content" cols="30" rows="5" placeholder="Type here..."></textarea>
+               <input type="submit" value ="Post">
+            </form>
+            <% } %>
 
 
-<div id = "posts-list-container">
- <ul>
-    <% for(post of posts) { %> 
-       <%- include('_post') -%>
-    <% } %>       
- </ul>
+            <div id = "posts-list-container">
+            <ul>
+               <% for(post of posts) { %> 
+                  <%- include('_post') -%>
+               <% } %>       
+            </ul>
+
+         </div>
+      </section>
+
+      <section id = "user-friends">
+            <h4>Friends List</h4>
+            <!-- listing all users  only when current user is logged in-->
+            <% if(locals.user) { %> 
+            <% for(u of all_users) {  %>
+               <p>
+                  <a href="/users/profile/<%= u.id %>"><%= u.name %></a>
+               </p>
+            <% } %>
+            <% } %>
+
+      </section>
 
 </div>
-</section>
-
-<section id = "user-friends">
-   <h4>Friends List</h4>
-   <!-- listing all users  only when current user is logged in-->
-   <% if(locals.user) { %> 
-   <% for(u of all_users) {  %>
-      <p>
-         <a href="/users/profile/<%= u.id %>"><%= u.name %></a>
-      </p>
-   <% } %>
-   <% } %>
-
-</section>
 
      
