--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -4,27 +4,13 @@
 
 <!-- if user is signed In then only we will show the form to update his/her profile-->
 <section id="userprofile-form">
-  <!-- locals.user.id means signedIn user id && profile_user.id means id of user coming from form-->
+  <!-- locals.user.id means signedIn user id && profile_user.id means id of user coming from 
+    form present in home.ejs)-->
   <% if(locals.user.id == profile_user.id){%>
   <h2>Update your profile by filling this form</h2>
   <form action="/users/update/<%= profile_user.id%>" method="POST">
-    <input
-      type="text"
-      name="name"
-      ,
-      placeholder="Your Name"
-      ,
-      value="<%= profile_user.name %>"
-      required
-    />
-    <input
-      type="email"
-      name="email"
-      ,
-      placeholder="Your email"
-      value="<%= profile_user.email %>"
-      required
-    />
+    <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name %>"required />
+    <input type="email" name="email" pla ceholder="Your email" value="<%= profile_user.email %>" required />
     <input type="submit" value="Edit Profile" />
   </form>
   
