created Flash Messages

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -3,6 +3,7 @@
 // basiclly we are taking the post at left and freind at right side
 #home-container {
     display: flex;
+    
     #feed-posts {
         width: 70%;
         padding: 10px;
@@ -10,8 +11,8 @@
     #user-friends {
         width: 30%;
         padding: 10px;
-        border-left: 1px solid lightgray;
-        height: 100%;
+        border-left: 2px solid lightgray;
+        height: 800px;
     }
 
 }
