--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -6,5 +6,5 @@
   #home-container #user-friends {
     width: 30%;
     padding: 10px;
-    border-left: 1px solid lightgray;
-    height: 100%; }
+    border-left: 2px solid lightgray;
+    height: 800px; }
