--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,6 +22,13 @@
         <!-- this is the content part that will render at runtime i.e userProfile.ejs or home.js-->
         <!-- provided by layout library-->
 
+
+        <!-- accessing flash messags in our templates 
+        choosing layout.ejs bcs this is common layout for whole application-->
+        <% if(flash.success && flash.success.length>0) {%>
+          <h5><%= flash.success %> </h5>
+        <% }%>  
+
         
         <!-- we are demonstrating how .scss contents will comipled and set into the .css files
         by saasMiddlewwaare library(node-saas-middleware)-->
