added style to the respective pages

--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -8,7 +8,7 @@
     form present in home.ejs)-->
   <% if(locals.user.id == profile_user.id){%>
   <h2>Update your profile by filling this form</h2>
-  <form action="/users/update/<%= profile_user.id%>" method="POST">
+  <form action="/users/update/<%= profile_user.id%>" method="POST" id="profile-form">
     <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name %>"required />
     <input type="email" name="email" pla ceholder="Your email" value="<%= profile_user.email %>" required />
     <input type="submit" value="Edit Profile" />
