--- a/assets/css/user_sign_up.css
+++ b/assets/css/user_sign_up.css
@@ -1,28 +1,29 @@
-#userprofile-form h2 {
+h1 {
   font-size: 24px;
   text-align: center;
   margin-bottom: 20px; }
 
-#userprofile-form #profile-form {
-  width: 20%;
+#sign-up-form {
+  width: 30%;
   background-color: #fff;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   text-align: center;
   margin: 0 auto; }
-  #userprofile-form #profile-form input[type="text"],
-  #userprofile-form #profile-form input[type="email"],
-  #userprofile-form #profile-form input[type="submit"] {
+  #sign-up-form input[type="text"],
+  #sign-up-form input[type="email"],
+  #sign-up-form input[type="password"],
+  #sign-up-form input[type="submit"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px; }
-  #userprofile-form #profile-form input[type="submit"] {
-    background-color: #dc85cd;
+  #sign-up-form input[type="submit"] {
+    background-color: #c0ef48;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s; }
-  #userprofile-form #profile-form input[type="submit"]:hover {
+  #sign-up-form input[type="submit"]:hover {
     background-color: #555; }
