--- a/assets/scss/userProfile.scss
+++ b/assets/scss/userProfile.scss
@@ -1,3 +1,39 @@
-body {
-    background-color: lightblue;
+#userprofile-form{
+    h2{
+        font-size: 24px;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+ #profile-form {
+        width: 20%;
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        text-align: center;
+        margin: 0 auto;
+
+            input[type="text"],
+            input[type="email"],
+            input[type="submit"] {
+                width: 100%;
+                padding: 10px;
+                margin-bottom: 10px;
+                border: 1px solid #ccc;
+                border-radius: 5px;
+            }
+
+            input[type="submit"] {
+               // background-color: #333;
+               background-color: rgb(220, 133, 205);
+                color: white;
+                cursor: pointer;
+                transition: background-color 0.3s;
+
+            }
+
+            input[type="submit"]:hover {
+                background-color: #555;
+            }
+        }  
 }
