--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -20,9 +20,9 @@
     <div class="post-comments">
         <% if(locals.user){%> 
             <form action="/comments/create" method="POST">
-                <input type="text" name="content" placeholder="type here to add comment...">
+                <input type="text" name="content" placeholder="type here to add comment..." id="type-comment">
                 <input type="hidden" name="post"  value="<%= post._id %>" >
-                <input type="submit" value="Add Comment">
+                <input type="submit" value="Add Comment" id="add-comment">
             </form>
             <%} %>
     </div>
