--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,6 +16,12 @@
 
       <link rel="stylesheet" href="/css/header.css">
       <link rel="stylesheet" href="/css/footer.css">
+      <link rel="stylesheet" href="/css/user_sign_in.css">
+      <link rel="stylesheet" href="/css/user_sign_up.css">
+      <link rel="stylesheet" href="/css/post.css">
+      <link rel="stylesheet" href="/css/userProfile.css">
+
+      
       <%- style %>
     </head>
     <body>
