--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,7 +1,7 @@
 <h1>Sign Up</h1>
 
 
-<form action = "/users/create" method = "POST">
+<form action = "/users/create" method = "POST" id="sign-up-form">
     <input type="text" name = "name", placeholder="Your Name", required>
     <input type="email" name = "email", placeholder="Email", required>
     <input type="password" name = "password", placeholder="Password", required>
