--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -6,4 +6,5 @@
   #home-container #user-friends {
     width: 30%;
     padding: 10px;
-    border-left: 2px solid lightgray; }
+    border-left: 2px solid lightgray;
+    height: 100%; }
