--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -3,7 +3,7 @@
 // basiclly we are taking the post at left and freind at right side
 #home-container {
     display: flex;
-    
+    height: 100%;
     #feed-posts {
         width: 70%;
         padding: 10px;
