Some changes in the styling or Scss files

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,7 +2,7 @@ heading {
   background-color: #644597;
   color: white;
   font-size: 20px;
-  padding: 10px;
+  padding: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
