--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,4 +1,8 @@
 footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   background-color: #644597;
   color: white;
   padding: 10px;
