--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,10 +1,42 @@
 #home-container {
-  display: flex; }
+  display: flex;
+  width: 100%;
+  padding-bottom: 2%; }
+  #home-container #new-post-form {
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    margin-bottom: 20px; }
+    #home-container #new-post-form h3 {
+      font-size: 30px;
+      margin-bottom: 10px; }
+    #home-container #new-post-form textarea {
+      width: 60%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      margin-bottom: 10px; }
+    #home-container #new-post-form input[type="submit"] {
+      background-color: #333;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s; }
+      #home-container #new-post-form input[type="submit"]:hover {
+        background-color: #555; }
   #home-container #feed-posts {
     width: 70%;
     padding: 10px; }
+    #home-container #feed-posts #posts-list-container ul {
+      list-style-type: none;
+      padding: 0; }
   #home-container #user-friends {
     width: 30%;
-    padding: 10px;
-    border-left: 2px solid lightgray;
-    height: 100%; }
+    padding-left: 10px;
+    border-left: 2px solid lightgray; }
+    #home-container #user-friends p a {
+      text-decoration: none;
+      color: #fff;
+      font-size: 24px; }
