--- a/assets/css/user_sign_up.css
+++ b/assets/css/user_sign_up.css
@@ -1,5 +1,5 @@
 h1 {
-  font-size: 24px;
+  font-size: 35px;
   text-align: center;
   margin-bottom: 20px; }
 
@@ -21,7 +21,7 @@ h1 {
     border: 1px solid #ccc;
     border-radius: 5px; }
   #sign-up-form input[type="submit"] {
-    background-color: #c0ef48;
+    background-color: #97ce0d;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s; }
