--- a/assets/scss/user_sign_up.scss
+++ b/assets/scss/user_sign_up.scss
@@ -3,9 +3,9 @@
 // This is SASS styling for the Sign Up form
 
 h1 {
-    font-size: 24px;
-  text-align: center;
-  margin-bottom: 20px;
+    font-size: 35px;
+    text-align: center;
+    margin-bottom: 20px;
 }
   
 
@@ -30,7 +30,7 @@ h1 {
         }
 
         input[type="submit"] {
-            background-color: #c0ef48;
+            background-color: #97ce0d;
             color: white;
             cursor: pointer;
             transition: background-color 0.3s;
