--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,7 +1,7 @@
 <!-- this is partial file which is used by differenet views multiple time same as function.-->
 
 <heading>
-   <h1>Codeial</h1>
+   <h1><a href="/">Codeial</a></h1>
     <ul>
         <!-- if user is logged in then-->
         <% if(locals.user) { %>
