--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -28,7 +28,9 @@
     color: white;
     padding: 10px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+
+    
   }
    
