--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -12,6 +12,14 @@ heading {
     align-items: center; // Vertically center content
     width: 100%;
 
+        h1 {
+            
+            a {
+                text-decoration: none;
+                color: #fff;
+            }
+        }
+
 
         ul {
             list-style-type: none;
