--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
             <!-- if user is not signedIn then don't show the post form or signed In user can see the post form-->
             <% if(locals.user) { %>
             <form action="/posts/create" id = "new-post-form" method="POST" >
-               <textarea name="content" cols="30" rows="5" placeholder="Type here..."></textarea>
+               <textarea name="content" cols="30" rows="5" placeholder="Type here..."></textarea required>
                <input type="submit" value ="Post">
             </form>
             <% } %>
@@ -39,5 +39,6 @@
       </section>
 
 </div>
+<script src = "/js/home_posts.js"></script>
 
      
