--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -10,7 +10,7 @@
             <small>
                 <!-- added class here bcs we can do styling and in 
                     future we will be to delete the post using ajax-->
-               <a class="delete-post-button" href="/posts/destroy/<%= post.id %>">Delete Post(X)</a>
+               <a class="delete-post-button" href="/posts/destroy/<%=post._id %>">Delete Post(X)</a>
             </small>
          <% } %>   
 
@@ -23,7 +23,7 @@
     <!-- showing commment form-->
     <div class="post-comments">
         <% if(locals.user){%> 
-            <form action="/comments/create" method="POST">
+            <form action="/comments/create" method="POST" id = "new-comment-form">
                 <input type="text" name="content" placeholder="type here to add comment..." id="type-comment" required>
                 <input type="hidden" name="post"  value="<%= post._id %>" >
                 <input type="submit" value="Add Comment" id="add-comment">
