--- a/assets/scss/userProfile.scss
+++ b/assets/scss/userProfile.scss
@@ -15,6 +15,7 @@
 
             input[type="text"],
             input[type="email"],
+            input[type="file"],
             input[type="submit"] {
                 width: 100%;
                 padding: 10px;
