Showing the Avatar, Connecting the DOTS

--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="../css/userProfile.css" />
 
+<img src="<%= user.avatar %>" alt="<%= user.name%>" id="avatar-image">
+
 <br />
 
 <!-- if user is signed In then only we will show the form to update his/her profile-->
