--- a/assets/scss/userProfile.scss
+++ b/assets/scss/userProfile.scss
@@ -1,3 +1,9 @@
+#avatar-image{
+    height: 500px;
+    width: 500px;
+    z-index: 10;
+    background-repeat: no-repeat;
+}
 #userprofile-form{
     h2{
         font-size: 24px;
