Google Auth Completed

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,11 +18,11 @@
          <div id = "posts-list-container">
             <ul>
                <% for(post of posts) { %> 
-                  <%- include('_post') -%>
+                  <%- include('_post') %>
                <% } %>       
             </ul>
-
          </div>
+         
       </section>
 
       <section id = "user-friends">
