signIn and signUp via google authentication

--- a/assets/scss/user_sign_up.scss
+++ b/assets/scss/user_sign_up.scss
@@ -41,4 +41,25 @@ h1 {
         }
 
 }
+
+p{
   
+    #googlesign-in-up {
+        padding-left: 2%;
+        margin-left: 33.59%;
+        width: 30.20%;
+        display: block;
+        text-align: center;
+        text-decoration: none; 
+        background-color:#f33016; 
+        color: #ffffff; 
+        padding: 10px 20px; 
+        border-radius: 5px; 
+        font-family: Arial, sans-serif;
+      }
+    
+      #googlesign-in-up:hover {
+        background-color: #357AE8;
+      }
+
+}
