--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -10,6 +10,8 @@
 
 </form>
 
-<p>
-    <a href="/users/auth/google">Google Sign In /Sign Up</a>
+<p>   
+    <a href="/users/auth/google" id="googlesign-in-up">Google Sign In / Sign Up</a>
 </p>
+    
+
