--- a/assets/css/user_sign_up.css
+++ b/assets/css/user_sign_up.css
@@ -27,3 +27,19 @@ h1 {
     transition: background-color 0.3s; }
   #sign-up-form input[type="submit"]:hover {
     background-color: #555; }
+
+p #googlesign-in-up {
+  padding-left: 2%;
+  margin-left: 33.59%;
+  width: 30.20%;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  background-color: #f33016;
+  color: #ffffff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-family: Arial, sans-serif; }
+
+p #googlesign-in-up:hover {
+  background-color: #357AE8; }
