--- a/assets/css/user_sign_up.css
+++ b/assets/css/user_sign_up.css
@@ -29,6 +29,7 @@ h1 {
     background-color: #555; }
 
 p #googlesign-in-up {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   padding-left: 2%;
   margin-left: 33.59%;
   width: 30.20%;
