--- a/assets/scss/user_sign_up.scss
+++ b/assets/scss/user_sign_up.scss
@@ -45,6 +45,7 @@ h1 {
 p{
   
     #googlesign-in-up {
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         padding-left: 2%;
         margin-left: 33.59%;
         width: 30.20%;
