--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,7 +39,10 @@
       </section>
 
 </div>
-<script src = "/js/home_posts.js"></script>
-<script src = "/js/home_comments.js"></script>
+<script type="text/javascript" src = "/js/home_posts.js"></script>
+<script  type="text/javascript" src = "/js/home_comments.js"></script>
+
+
+
 
      
