--- a/assets/scss/user_sign_in.scss
+++ b/assets/scss/user_sign_in.scss
@@ -48,6 +48,39 @@ h1 {
             background-color: #555;
         }
 
+        a {
+        color: white; /* Change link text color */
+        background-color: #833ab4;
+        border-radius: 10px;
+        box-shadow: 2px 2px #353434;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        text-decoration: none; /* Remove default underline */
+        display: block; /* Make it a block element for margin */
+        margin-top: 10px; /* Add some space from the above elements */
+        transition: color 0.3s, transform 0.3s; /* Add smooth color and transform transitions */
+
+        &:hover {
+            color: #19eda3; /* Change text color on hover */
+            transform: scale(1.01); /* Add a slight scaling effect on hover */
+            background-color: #11011a;
+
+        }
+        &:after {
+            content: '?'; /* Adding the question mark */
+            display: inline-block; /* Make the question mark a separate element */
+            animation: moveText 2s infinite alternate; /* Apply the movement animation */
+        }
+        
+        @keyframes moveText {
+            0% {
+                transform: translateX(0); /* Starting position */
+            }
+            100% {
+                transform: translateX(5px); /* Ending position */
+            }
+        }    
+    }
 }
 
   
