--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,6 +21,7 @@
       <link rel="stylesheet" href="/css/user_sign_up.css">
       <link rel="stylesheet" href="/css/post.css">
       <link rel="stylesheet" href="/css/userProfile.css">
+      <link rel="stylesheet" href="/css/auth.css">
 
       
       <%- style %>
