--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -4,7 +4,9 @@
     <input type="email" name = "email", placeholder="Email", required>
     <input type="password" name = "password", placeholder="Password", required>
     <input type="submit" value ="Sign In" >
-
+    <div>
+        <a href="/auth">Forgot Password ?</a>
+    </div>
 </form>
 
 <p>   
